project( tinyxml )
cmake_minimum_required( VERSION 2.6 )
set ( CMAKE_BUILD_TYPE Debug )
add_definitions ( -Wall -DHEEKSCAD -DUNICODE -DTIXML_USE_STL )
#FIND_PACKAGE( wxWidgets REQUIRED COMPONENTS base core gl )
#INCLUDE(${wxWidgets_USE_FILE})
#find_package( PythonLibs REQUIRED )
include_directories ( ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${PYTHON_INCLUDE_DIRS} )
set ( LIBRARY_OUTPUT_PATH ../bin )

set( tinyxml_SRCS tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp )
set( tinyxml_HDRS tinystr.h  tinyxml.h )

add_library( tinyxml SHARED ${tinyxml_SRCS} ${tinyxml_HDRS} )
target_link_libraries( tinyxml ${PYTHON_LIBRARIES} )
set_target_properties( tinyxml PROPERTIES SOVERSION ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH} )
install( TARGETS tinyxml DESTINATION lib )
